--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp2.Views" xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}"
+        xmlns:local="clr-namespace:WpfApp2.Views" xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
       mc:Ignorable="d"
         Title="MainView">
     <Grid>
@@ -17,9 +17,9 @@
         
         
             <StackPanel x:Name="SideMenu" Grid.Column="0" Background="#0140c1" >
-            <Button x:Name="SearchPatientButton" Content="Search Patient" Click="SearchPatientButton_Click" Margin="10" Height="30" Background="#81d4f9" FontSize="15"/>
-            <Button x:Name="AddPatientButton" Content="Add Patient" Click="AddPatientButton_Click" Margin="10" Height="30" Background="#81d4f9" FontSize="15"/>
-            <Button x:Name="UserManagementButton" Content="User Management" Click="UserManagementButton_Click" Margin="10" Height="30" Background="#81d4f9" FontSize="15"/>
+            <Button x:Name="SearchPatientButton" Content="Search Patient" Command="{Binding SearchPatientCommand}"  Margin="10" Height="30" Background="#81d4f9" FontSize="15"/>
+            <Button x:Name="AddPatientButton" Content="Add Patient" Command="{Binding AddPatientCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15"/>
+            <Button x:Name="UserManagementButton" Content="User Management" Command="{Binding UserManagementCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15"/>
             </StackPanel>
         
 
