--- a/Views/NonAdminView.xaml
+++ b/Views/NonAdminView.xaml
@@ -3,8 +3,8 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WpfApp2.Views"
-      mc:Ignorable="d" 
+      xmlns:local="clr-namespace:WpfApp2.Views" xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:NonAdminViewModel}"
+             mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="600"
       >
 
@@ -41,13 +41,13 @@
                    Background="White" 
                     Foreground="Navy" Grid.Row="2" Grid.Column="0" Margin="0,120,0,0" />
 
-        <TextBlock x:Name="curr_user" FontSize="15" 
+        <TextBlock x:Name="curr_user" FontSize="15" Text="{Binding CurrentUsername, Mode=OneWay}"
                    VerticalAlignment="Top"
                    TextAlignment="Left"
                    Background="White" 
                      Grid.Row="2" Grid.Column="1" Margin="0,95,0,0"></TextBlock>
 
-        <TextBlock x:Name="curr_user_group"
+        <TextBlock x:Name="curr_user_group" Text="{Binding Role, Mode=OneWay}"
                    FontSize="15"
                    VerticalAlignment="Top"
                    TextAlignment="Left"
