Added view, camera funtionality

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,15 @@
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
         Title="MainWindow" WindowState="Maximized"
-        xmlns:vw="clr-namespace:WpfApp2.Views">
+        xmlns:vw="clr-namespace:WpfApp2.Views"
+         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal"
+        TextOptions.TextRenderingMode="Auto"
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}">
 
     <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" >
         
