--- a/Views/AddPatientView.xaml
+++ b/Views/AddPatientView.xaml
@@ -23,35 +23,34 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="First Name:" Grid.Row="0" Grid.Column="0" Margin="10"/>
-        <TextBox x:Name="FirstNameTextBox" Grid.Row="0" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="First Name:" Grid.Row="0" Grid.Column="0" Margin="10" FontSize="15" FontFamily="MS Reference Sans Serif"/>
+        <TextBox x:Name="FirstNameTextBox" Grid.Row="0" Grid.Column="1" Margin="5" FontSize="15" FontFamily="MS Reference Sans Serif" Text="{Binding FirstName}"/>
 
-        <TextBlock Text="Last Name:" Grid.Row="1" Grid.Column="0" Margin="10"/>
-        <TextBox x:Name="LastNameTextBox" Grid.Row="1" Grid.Column="1" Margin="5"/>
+        <TextBlock Text="Last Name:" Grid.Row="1" Grid.Column="0" Margin="10" FontSize="15" FontFamily="MS Reference Sans Serif"/>
+        <TextBox x:Name="LastNameTextBox" Grid.Row="1" Grid.Column="1" Margin="5" FontSize="15" FontFamily="MS Reference Sans Serif" Text="{Binding LastName}"/>
 
-        <TextBlock Text="Date of Birth:" Grid.Row="2" Grid.Column="0" Margin="10"/>
-        <DatePicker x:Name="DateOfBirthDatePicker" Grid.Row="2" Grid.Column="1" Margin="5" Width="150" HorizontalAlignment="Left"/>
+        <TextBlock Text="Date of Birth:" Grid.Row="2" Grid.Column="0" Margin="10" FontSize="15" FontFamily="MS Reference Sans Serif"/>
+        <DatePicker x:Name="DateOfBirthDatePicker" Grid.Row="2" Grid.Column="1" Margin="5" Width="150" HorizontalAlignment="Left" SelectedDate="{Binding DOB}"/>
 
-        <TextBlock Text="Gender:" Grid.Row="3" Grid.Column="0" Margin="10"/>
+        <TextBlock Text="Gender:" Grid.Row="3" Grid.Column="0" Margin="10" FontSize="15" FontFamily="MS Reference Sans Serif"/>
         <StackPanel Orientation="Horizontal" Grid.Row="3" Grid.Column="1" Margin="5">
-            <RadioButton x:Name="MaleRadioButton" Content="Male" GroupName="Gender" IsChecked="True"/>
-            <RadioButton x:Name="FemaleRadioButton" Content="Female" GroupName="Gender"/>
+            <RadioButton x:Name="MaleRadioButton" Content="Male" Margin="10" GroupName="Gender" FontSize="15" FontFamily="MS Reference Sans Serif" IsChecked="{Binding Path=ModeArray[0], Mode=TwoWay}" />
+            <RadioButton x:Name="FemaleRadioButton" Content="Female" Margin="10" GroupName="Gender" FontSize="15" FontFamily="MS Reference Sans Serif" IsChecked="{Binding Path=ModeArray[1], Mode=TwoWay}" />
             <TextBox x:Name="OtherGenderTextBox" Margin="10 0 0 0" Visibility="Collapsed"/>
         </StackPanel>
 
-        <TextBlock Text="Height:" Grid.Row="4" Grid.Column="0" Margin="10"/>
-        <TextBox x:Name="HeightTextBox" Grid.Row="4" Grid.Column="1" Margin="5" Width="150" HorizontalAlignment="Left"/>
+        <TextBlock Text="Height:" Grid.Row="4" Grid.Column="0" Margin="10" FontSize="15" FontFamily="MS Reference Sans Serif"/>
+        <TextBox x:Name="HeightTextBox" Grid.Row="4" Grid.Column="1" Margin="5" Width="150" HorizontalAlignment="Left" FontSize="15" FontFamily="MS Reference Sans Serif" Text="{Binding Height}">
+            
+        </TextBox>
 
         <Button x:Name="AddPatientButton" FontSize="15" Grid.Row="5" Grid.Column="1" Content="Add Patient" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="10" Background="#3A82D6" Width="120" Command="{Binding AddPatientCommand}">
             
         </Button>
 
-        <StatusBar x:Name="StatusBar" Grid.Row="6" Grid.ColumnSpan="2" Margin="10">
-            <StatusBarItem>
-                <TextBlock x:Name="StatusTextBlock"/>
-            </StatusBarItem>
-
-        </StatusBar>
+        <Label Grid.Column="1" Grid.Row="6" FontSize="15" Content="{Binding ErrorMessage, Mode=OneWay}">
+                
+        </Label>
 
     </Grid>
 </UserControl>
