--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -4,62 +4,69 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2.Views" 
-      xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" >
+        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+      xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}" mc:Ignorable="d">
     <Grid>
 
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="4*"/>
-            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        
-        
-        <TextBlock Text="Please enter username and password to proceed"
+
+        <StackPanel Grid.Row="0" Orientation="Vertical">
+
+            <Image Source="C:\Users\X6AUJWAN\Desktop\WpfApp2\Resources\download.png" HorizontalAlignment="Center" Width="100" Height="100"/>
+
+            <TextBlock Text="Please enter username and password to proceed"
                    FontSize="15"
                    FontWeight="Bold"
-                   VerticalAlignment="Bottom"
                    HorizontalAlignment="Center"
-                   
-                    Foreground="#0c188e" Margin="0,60,0,0" Grid.Row="0" />
+                   FontFamily="MS Reference Sans Serif" Margin="5"
+                    Foreground="#0c188e"  Grid.Row="0" />
+            
 
-        <TextBlock Text="User"
-                   FontSize="15"
-                   FontWeight="Bold"
-                   TextAlignment="Center"
-                   
-                    Foreground="#0c188e" Margin="83,35,377,279" Grid.Row="1" Width="40" Height="20" />
 
-        <TextBox  Text="{Binding Username, Mode=TwoWay}"
+        </StackPanel>
+
+
+        <TextBox  Text="{Binding Username, Mode=TwoWay}" materialDesign:HintAssist.Hint="Username"
                   Grid.Row="1"
-                 Padding="2"
-                  Width="200" Height="25" Margin="163,30,137,274" >
+                 Padding="2" FontSize="15"
+                  Width="200" Height="25" Margin="185,40,185,269" FontFamily="MS Reference Sans Serif">
+            <TextBox.Resources>
+                <Style TargetType="{x:Type materialDesign:SmartHint}">
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                </Style>
+            </TextBox.Resources>
         </TextBox>
 
-        <TextBox Text="{Binding Password, Mode=TwoWay}"
-                 Padding="2"
-                 Grid.Row="1" Width="150" Height="25" Margin="181,79,169,230"/>
-        
-        
+        <TextBox Text="{Binding Password, Mode=TwoWay}" materialDesign:HintAssist.Hint="Password"
+                 Padding="2" 
+                 Grid.Row="1" Width="125" Height="25" Margin="210,80,210,229" FontFamily="MS Reference Sans Serif">
 
-        <TextBlock Text="Password"
-                   FontSize="15"
-                   FontWeight="Bold"
-                   Width="80" Height="20"
-                   
-                   TextAlignment="Center"
-                    
-                    Foreground="#0c188e" Margin="63,81,357,230" Grid.Row="1" />
+            <TextBox.Resources>
+                <Style TargetType="{x:Type materialDesign:SmartHint}">
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                </Style>
+            </TextBox.Resources>
+
+        </TextBox>
+
+
+
+
 
         <Button Name ="login"
                 Content="Login"
-                BorderBrush="Black"
+                
                 Background="#0c188e"
                 FontSize="15"
-                BorderThickness="1"
-                Grid.Row="1" Command="{Binding LoginCommand}" Width="80" Height="30" Margin="231,125,209,145" />
-        
-        <Label Content="{Binding ErrorMessage, Mode=OneWay}" Grid.Row="1" Foreground="Black" Width="150" Height="30" Margin="191,172,179,132" FontWeight="Bold" FontSize="15" HorizontalContentAlignment="Center"  />
+                BorderThickness="1" FontFamily="MS Reference Sans Serif"
+                materialDesign:ButtonAssist.CornerRadius="20"
+                Grid.Row="1" Command="{Binding LoginCommand}" Width="80" Height="40" Margin="245,137,245,167" />
+
+        <Label Content="{Binding ErrorMessage, Mode=OneWay}" Grid.Row="1" Foreground="Black" Width="150" Height="30" Margin="210,182,210,132" FontWeight="Bold" FontSize="15" HorizontalContentAlignment="Center"  />
 
     </Grid>
 </Page>
