--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -16,13 +16,18 @@
         
         
         
-            <StackPanel x:Name="SideMenu" Grid.Column="0" Background="#0140c1" >
-            <Button x:Name="SearchPatientButton" Content="Search Patient" Command="{Binding SearchPatientCommand}"  Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black"/>
-            <Button x:Name="AddPatientButton" Content="Add Patient" Command="{Binding AddPatientCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black"/>
-            <Button x:Name="UserManagementButton" Content="User Management" Command="{Binding UserManagementCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black"/>
-            </StackPanel>
-        
+        <StackPanel x:Name="SideMenu" Grid.Column="0" Background="#0140c1" >
+            <Button x:Name="SearchPatientButton" Content="Search Patient" Command="{Binding SearchPatientCommand}"  Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
+            <Button x:Name="AddPatientButton" Content="Add Patient" Command="{Binding AddPatientCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
+            <Button x:Name="UserManagementButton" Content="User Management" Command="{Binding UserManagementCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
+                <Grid Height="450"/>
+            <Button Content="Log out"  Margin="10" Height="30" Width="90" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
 
+
+        </StackPanel>
+
+
+        
         <!-- User control on the right side -->
         
             <ContentControl x:Name="ContentArea" Grid.Column="1"/>
