--- a/Views/AddDataToPatientView.xaml
+++ b/Views/AddDataToPatientView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WpfApp2.Views" xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:AddDataToPatientViewModel}"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
@@ -26,8 +27,8 @@
         
         <StackPanel Orientation="Vertical" Margin="5" Width="150" Grid.Column="1" Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Button x:Name="recordButton" Content="{Binding ButtonText, Mode=TwoWay}" Margin="5" Command="{Binding RecordCommand}" />
-            <Button x:Name="captureButton" Content="Capture" Margin="5" />
-            <ComboBox x:Name="ddlVideoDevices" ItemsSource="{Binding VideoDevices, Mode=OneWay}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}" HorizontalContentAlignment="Center"></ComboBox>
+            <Button x:Name="captureButton" Content="Capture" Margin="5" Command="{Binding CaptureCommand}"/>
+            <ComboBox x:Name="ddlVideoDevices" ItemsSource="{Binding VideoDevices, Mode=OneWay}" SelectedItem="{Binding SelectedDevice, Mode=TwoWay}" HorizontalContentAlignment="Center" materialDesign:HintAssist.Hint="Choose camera"></ComboBox>
             
         </StackPanel>
 
