--- a/Views/MainView.xaml
+++ b/Views/MainView.xaml
@@ -21,7 +21,7 @@
             <Button x:Name="AddPatientButton" Content="Add Patient" Command="{Binding AddPatientCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
             <Button x:Name="UserManagementButton" Content="User Management" Command="{Binding UserManagementCommand}" Margin="10" Height="30" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
                 <Grid Height="450"/>
-            <Button Content="Log out"  Margin="10" Height="30" Width="90" Background="#81d4f9" FontSize="15" Foreground="Black" FontFamily="MS Reference Sans Serif"/>
+            <Button Content="Log out" Height="25" Width="70" Background="#81d4f9" FontSize="10"  Foreground="Black" FontFamily="MS Reference Sans Serif" Command="{Binding LogOutCommand}"/>
 
 
         </StackPanel>
