--- a/Views/SearchPatientView.xaml
+++ b/Views/SearchPatientView.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp2.Views"
+             xmlns:local="clr-namespace:WpfApp2.Views" xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:SearchPatientViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="600">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -13,21 +13,52 @@
             <RowDefinition Height="2*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <TextBlock Text="Search by Firstname or Lastname" Foreground="White" FontSize="20" HorizontalAlignment="Center" Height="30" VerticalAlignment="Top"/>
 
-        <ComboBox Name="combo" Padding="3" Margin="200,40,0,32" Width="100" HorizontalAlignment="Left" Height="30">
-            <ComboBoxItem Content="First Name"></ComboBoxItem>
-            <ComboBoxItem Content="Last Name"></ComboBoxItem>
-            
-        </ComboBox>
 
-        <TextBox  Height="30" Width="300" Margin="210,45,71,38"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="0" HorizontalAlignment="Center">
 
-        <ListView Grid.Row="1" Width="400">
-            <ListViewItem Content="Patient 1"></ListViewItem>
-            <ListViewItem Content="Patient 2"></ListViewItem>
-            <ListViewItem Content="Patient 3"></ListViewItem>
+
+            <ComboBox x:Name="combo" Padding="8"  Width="150"  Height="40" Text="{Binding SelectedParam}" FontSize="20" FontFamily="MS Reference Sans Serif" Margin="10" >
+                <ComboBoxItem Content="First Name"/>
+                <ComboBoxItem Content="Last Name"/>
+
+            </ComboBox>
+
+
+            <TextBox  Height="40" Width="300" Padding="1" Text="{Binding SearchQuery, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="10" FontSize="20" FontFamily="MS Reference Sans Serif"/>
+
+
+        </StackPanel>
+
+
+        <ListView Name="dgPatients"
+                  
+                  Grid.Row="1" Width="600" Height="300"
+                  
+                  ItemsSource="{Binding Patients}" FontSize="20" FontFamily="MS Reference Sans Serif" FontWeight="Bold" >
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <Button Content="See studies" Grid.Column="3" Margin="2" FontSize="10" Height="25" Width="90" Command="{Binding GoToStudyCommand}" />
+                        <TextBlock  Text="{Binding Firstname}" Grid.Column="0" Margin="5"/>
+                        <TextBlock  Text="{Binding Lastname}" Grid.Column="1" Margin="5"/>
+
+
+                    </Grid>
+
+                </DataTemplate>
+
+
+
+            </ListView.ItemTemplate>
+
         </ListView>
     </Grid>
 </UserControl>
