--- a/Views/LoginView.xaml
+++ b/Views/LoginView.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WpfApp2.Views" 
         
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-      xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}" mc:Ignorable="d">
+      xmlns:viewmodels="clr-namespace:WpfApp2.ViewModels" xmlns:components="clr-namespace:WpfApp2.Components" d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}" mc:Ignorable="d">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -30,7 +30,7 @@
         </StackPanel>
 
 
-        <TextBox  Text="{Binding Username, Mode=TwoWay}" materialDesign:HintAssist.Hint="Username"
+        <TextBox  Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" materialDesign:HintAssist.Hint="Username"
                   Grid.Row="1"
                  Padding="2" FontSize="15"
                   Width="200" Height="25" Margin="185,40,185,269" FontFamily="MS Reference Sans Serif">
@@ -41,17 +41,17 @@
             </TextBox.Resources>
         </TextBox>
 
-        <TextBox Text="{Binding Password, Mode=TwoWay}" materialDesign:HintAssist.Hint="Password"
-                 Padding="2" 
-                 Grid.Row="1" Width="125" Height="25" Margin="210,80,210,229" FontFamily="MS Reference Sans Serif">
-
-            <TextBox.Resources>
+        <components:BindablePasswordBox Password ="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Password"
+                  
+                 Grid.Row="1" Width="125" Height="25" Margin="210,80,210,229" >
+            
+            <components:BindablePasswordBox.Resources>
                 <Style TargetType="{x:Type materialDesign:SmartHint}">
                     <Setter Property="HorizontalAlignment" Value="Center"/>
                 </Style>
-            </TextBox.Resources>
+            </components:BindablePasswordBox.Resources>
 
-        </TextBox>
+        </components:BindablePasswordBox>
 
 
 
